@@ -633,6 +633,7 @@ Stephen Turner
 Bill Tutt
 Doobee R. Tzeck
 Lionel Ulmer
+Roger Upole
 Michael Urman
 Hector Urtubia
 Dmitry Vasiliev
